# dextool_mutate_demo

./: .dextool_mutate.toml  .gitignore  CMakeLists.txt  COMPILING.md  ChangeLog.txt  Makefile  README.md  README_dextool.md  buildtest.py  compiling.txt  config.h  config.mk  mosquitto.conf  readme.md  set-version.sh  test.sh  travis-install.sh
apps/: CMakeLists.txt  Makefile
client/: CMakeLists.txt  Makefile  args.txt  client_props.c  client_shared.c  client_shared.h  pub_client.c  pub_shared.c  pub_shared.h  rr_client.c  sub_client.c  sub_client_output.c  sub_client_output.h
cmake/: FindcJSON.cmake
docker/: README.md
include/: mosquitto.h  mosquitto_broker.h  mosquitto_plugin.h  mqtt_protocol.h
installer/: mosquitto.nsi  mosquitto64.nsi
lib/: CMakeLists.txt  Makefile  actions.c  alias_mosq.c  alias_mosq.h  callbacks.c  connect.c  handle_auth.c  handle_connack.c  handle_disconnect.c  handle_ping.c  handle_pubackcomp.c  handle_publish.c  handle_pubrec.c  handle_pubrel.c  handle_suback.c  handle_unsuback.c  helpers.c  linker.version  logging_mosq.c  logging_mosq.h  loop.c  memory_mosq.c  memory_mosq.h  messages_mosq.c  messages_mosq.h  misc_mosq.c  misc_mosq.h  mosquitto.c  mosquitto.h  mosquitto_internal.h  mqtt_protocol.h  net_mosq.c  net_mosq.h  net_mosq_ocsp.c  options.c  packet_datatypes.c  packet_mosq.c  packet_mosq.h  property_mosq.c  (+25 more)
man/: CMakeLists.txt  Makefile  mosquitto.8.xml  mosquitto.conf.5.xml  mosquitto_ctrl.1.xml  mosquitto_passwd.1.xml  mosquitto_pub.1.xml  (+2 more)
plugins/message-timestamp/: CMakeLists.txt  Makefile  mosquitto_message_timestamp.c
(+377 files in other folders)
